# Cpp17

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
10_CompileTimeIf/: main.cpp
12_DealingWithStringsAsTemplateParam/: main.cpp
15_std_optional/: main.cpp
16_std_variant/: main.cpp
17_std_any/: main.cpp
18_std_byte/: main.cpp
19_std_stringviews/: main.cpp
1_StructuredBindings/: customer1.h  structbind1.h
1_std_any/: main.cpp
20_fileSystemLib/: main.cpp
22_ParallelSTLAlgorithms/: main.cpp  timer.h
23_SubstrAndSearch/: main.cpp
24_OtherUtilityFunctionsAlgo/: main.cpp
2_ifAndSwitchInitialization/: main.cpp
2_std_invoke/: CMakeLists.txt  main.cpp
3_InlineVariables/: main.cpp
3_consexpr_if/: main.cpp
4_AggregateExtensions/: CMakeLists.txt  main.cpp
5_MandatoryCopyElision/: main.cpp
6_LambdaExtensions/: CMakeLists.txt  main.cpp
9_CTAD/: main.cpp
Cpp17_josuttis/: .clang-format  CMakeLists.txt
Cpp17_josuttis/1_StructuredBindings/: main.cpp
Cpp17_josuttis/6_LambdaExtensions/: lambdathis.h
Cpp17_josuttis/7_NewAttributes/: main.cpp
test/: CMakeLists.txt  main.cpp  pltr.json  ques.html
